--- a/Makefile.objs
+++ b/Makefile.objs
@@ -188,6 +188,7 @@ vhost-user-scsi.o-cflags := $(LIBISCSI_CFLAGS)
 vhost-user-scsi.o-libs := $(LIBISCSI_LIBS)
 vhost-user-scsi-obj-y = contrib/vhost-user-scsi/
 vhost-user-blk-obj-y = contrib/vhost-user-blk/
+rdmacm-server-obj-y = contrib/rdma-cm/
 
 ######################################################################
 trace-events-subdirs =
